auth professional user class and auth professional user interface updated to not return the password
