# src/api/src/docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: null
 definitions:
-    ProfessionalUser:
+    AuthProfessionalUser:
         description: ""
         properties:
             id:
@@ -8,6 +8,9 @@ definitions:
                 format: double
                 description: ""
             email:
+                type: string
+                description: ""
+            password:
                 type: string
                 description: ""
             name:
@@ -54,7 +57,9 @@ definitions:
                 description: ""
         type: object
         required:
+            - id
             - email
+            - password
             - name
             - lastname
             - dni
@@ -63,6 +68,7 @@ definitions:
             - tel
             - gender
             - birthdate
+            - created_at
             - category_id
     ICategory:
         description: ""
@@ -124,9 +130,6 @@ definitions:
             img:
                 type: string
                 description: ""
-            created_at:
-                type: string
-                description: ""
             category_id:
                 type: string
                 description: ""
@@ -181,10 +184,10 @@ paths:
                 -
                     description: ""
                     in: body
-                    name: professionalUser
+                    name: authUser
                     required: true
                     schema:
-                        $ref: '#/definitions/ProfessionalUser'
+                        $ref: '#/definitions/AuthProfessionalUser'
     /api/categories:
         get:
             operationId: CategoriesGet
