# src/api/src/models/users/ProfessionalUser.ts
@@ -5,7 +5,6 @@ import { IProfessionalUser } from "./ProfessionalUser.interface";
 export class ProfessionalUser implements IProfessionalUser {
     id?: number = 0;
     email: string = "";
-    password: string = "";
     name: string = "";
     lastname: string = "";
     dni: string = "";
@@ -18,7 +17,6 @@ export class ProfessionalUser implements IProfessionalUser {
     birthdate: string = "";
     auth_number?: string = "";
     img?: string = "";
-    created_at?: string = "";
     category_id: string = "";
 }
 
