# src/api/src/service/AuthUser.service.ts
@@ -3,16 +3,17 @@ import { ProfessionalUser } from "../models/users/ProfessionalUser";
 import { ProfessionalUserRepository } from "../repositories/ProfessionalUser.repository";
 import { InsertionResult } from "../core/repositories/commands/db.command";
 import bcrypt from "bcrypt";
+import { IAuthProfessionalUser } from "../controllers/AuthProfessionUser.interface";
 
 @Injectable({ lifeTime: DependencyLifeTime.Scoped })
 export class AuthService {
     constructor(private repo: ProfessionalUserRepository) {}
 
-    async register(professionalUser: ProfessionalUser): Promise<InsertionResult<number>> {
+    async register(authUser: IAuthProfessionalUser): Promise<InsertionResult<number>> {
         try {
             const salt = await bcrypt.genSalt(10);
-            professionalUser.password = await bcrypt.hash(professionalUser.password, salt);
-            const response = await this.repo.insertOne(professionalUser);
+            authUser.password = await bcrypt.hash(authUser.password, salt);
+            const response = await this.repo.insertOne(authUser);
             return response;
         } catch (error) {
             console.log(error);
